--- a/app/src/main/res/layout/fragment_like_lecture.xml
+++ b/app/src/main/res/layout/fragment_like_lecture.xml
@@ -15,5 +15,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:spanCount="3" />
+        app:spanCount="3"
+        tools:listitem="@layout/list_item_lecture_thumbnail"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
