--- a/app/src/main/res/layout/fragment_management_video.xml
+++ b/app/src/main/res/layout/fragment_management_video.xml
@@ -7,14 +7,16 @@
     tools:context=".ui.homeUI.myPage.managementVideo.ManagementVideoFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_video"
+        android:id="@+id/rv_lecture"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:spanCount="3"
+        tools:listitem="@layout/list_item_lecture_thumbnail"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:src="@drawable/edit"
@@ -22,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/padding_extra_large"
+        android:backgroundTint="@color/primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
